# inNOChem-hackathon

./: Dockerfile.frontend  Makefile  README.md  docker-compose.yml  package-lock.json  pitch-notes.txt  project_description.md  tech_stack.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
backend/data/raw/: dyeing_dataset.xlsx
backend/scripts/: build_rag_index.py  convert_dataset.py  seed_dev_data.py  train_models.py
backend/src/: main.py
backend/src/api/: router.py
backend/src/api/v1/: admin.py  auth.py  chemical.py  (+6 more)
backend/src/config/: database.py  seed.py  settings.py
backend/src/core/: cache.py  deps.py  executor.py  security.py
backend/src/engines/: __init__.py  chemical_engine.py  errors.py  explainability_engine.py  kinetics.py  optimization_engine.py  pipeline.py  pr_eos.py  risk_engine.py  risk_firewall.py  simulation_engine.py  sustainability_engine.py
backend/src/jobs/: celery_app.py  tasks.py
backend/src/ml/: features.py  registry.py
backend/src/rag/: retriever.py
backend/src/repositories/: base.py  feedback_repo.py  model_repo.py  result_repo.py  session_repo.py  user_repo.py
backend/src/schemas/: admin.py  auth.py  chemical.py  common.py  dashboard.py  feedback.py  process.py  session.py  verification.py
backend/src/services/: auth_service.py  compute_service.py  dashboard_service.py  export_service.py  feedback_service.py  session_service.py  user_service.py  verification_service.py
backend/tests/: smoke_flow.py  test_engines.py
(+77 files in other folders)
