[project]
name = "greendye-api"
version = "1.0.0"
description = "GreenDye Twin backend — Explainable AI digital twin for scCO2 dyeing"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI uses Depends() in defaults by design

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
plugins = []
